--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,15 +8,19 @@ steps:
       - '-c'
       - |
         ##get auth token
-        export AUTH_TOKEN=$(gcloud auth print-access-token)
+        ##export AUTH_TOKEN=$(gcloud auth print-access-token)
         ##set instance name
-        export INSTANCE_ID=testDataFusionPipeline
-        export REGION=us-west1
+        ##export INSTANCE_ID=testDataFusionPipeline
+        ##export REGION=us-west1
         ##get CDAP_ENDPOINT
-        export CDAP_ENDPOINT=$(gcloud beta data-fusion instances describe --location="$REGION" --format="value(apiEndpoint)" ${INSTANCE_ID})
-        curl -X POST -H "Authorization: Bearer ${AUTH_TOKEN}" -H "Content-Type: application/json" -d @pipeline.json "${CDAP_ENDPOINT}/v3/namespaces/default/apps/DataFusionQuickstartV1/update"
+        export CDAP_ENDPOINT=$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})
+        curl -X POST -H "Authorization: Bearer ${_AUTH_TOKEN}" -H "Content-Type: application/json" -d @pipeline.json "${CDAP_ENDPOINT}/v3/namespaces/default/apps/DataFusionQuickstartV1/update"
     volumes:
     - name: 'ssh'
       path: /root/.ssh
 options:
   logging: CLOUD_LOGGING_ONLY
+substitutions:
+  _REGION: 'us-west1'
+  _INSTANCE_ID: 'testDataFusionPipeline'
+  _AUTH_TOKEN: $(gcloud auth print-access-token)
