--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,8 +13,8 @@ steps:
         ##export INSTANCE_ID=testDataFusionPipeline
         ##export REGION=us-west1
         ##get CDAP_ENDPOINT
-        export CDAP_ENDPOINT=$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})
-        curl -X POST -H "Authorization: Bearer ${_AUTH_TOKEN}" -H "Content-Type: application/json" -d @pipeline.json "${CDAP_ENDPOINT}/v3/namespaces/default/apps/DataFusionQuickstartV1/update"
+        ##export CDAP_ENDPOINT=$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})
+        curl -X POST -H "Authorization: Bearer ${_AUTH_TOKEN}" -H "Content-Type: application/json" -d @pipeline.json "${_CDAP_ENDPOINT}/v3/namespaces/default/apps/DataFusionQuickstartV1/update"
     volumes:
     - name: 'ssh'
       path: /root/.ssh
@@ -24,3 +24,4 @@ substitutions:
   _REGION: 'us-west1'
   _INSTANCE_ID: 'testDataFusionPipeline'
   _AUTH_TOKEN: $(gcloud auth print-access-token)
+  _CDAP_ENDPOINT: $(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})
