--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,8 +8,8 @@ steps:
       - '-c'
       - |
         curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" -H "Content-Type: application/json" -d @pipeline.json "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/DataFusionQuickstartV1/update"
-##options:
-##  logging: CLOUD_LOGGING_ONLY
+options:
+  logging: CLOUD_LOGGING_ONLY
 substitutions:
   _REGION: 'us-west1'
   _INSTANCE_ID: 'testDataFusionPipeline'
