--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -12,4 +12,4 @@ options:
   logging: CLOUD_LOGGING_ONLY
 substitutions:
   _REGION: 'us-west1'
-  _INSTANCE_ID: 'testDataFusionPipeline'
+  _INSTANCE_ID: 'testdatafusionpipeline'
