--- a/cloudbuild_feature.yaml
+++ b/cloudbuild_feature.yaml
@@ -1,13 +1,20 @@
 steps:       
   - name: 'gcr.io/cloud-builders/gcloud'
-    id: push-manifest
-    ##    waitFor:
-    ##      - generate-manifest
+    id: Update Fusion Pipeline
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" -H "Content-Type: application/json" -d @DataFusionQuickstartV1-cdap-data-pipeline.json "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/DataFusionQuickstartfeatures_test1/update"
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: Run Fusion Pipeline
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+##        curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" -H "Content-Type: application/json" -d @DataFusionQuickstartV1-cdap-data-pipeline.json "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/DataFusionQuickstartfeatures_test1/update"
+##        curl -X POST -H "Authorization: Bearer ${gcloud auth print-access-token}" "${CDF_API}/v3/namespaces/namespace-id/apps/pipeline-name/workflows/DataPipelineWorkflow/start"
+         curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" -H "Content-Type: application/json" "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/DataFusionQuickstartfeatures_test1/workflows/DataPipelineWorkflow/start"
 options:
   logging: CLOUD_LOGGING_ONLY
 substitutions:
