--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,14 @@
-- name: gcr.io/cloud-builders/gsutil
-  args: ['cp', 'DataFusionQuickstartV1-cdap-data-pipeline.json', '${BUCKET}']
-  dir: '$REPO_NAME'
-  id: 'deploy-processing-pipeline'
-- name: gcr.io/cloud-builders/gcloud
-  entrypoint: 'bash'
-  args: [$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/DataFusionQuickstartV1/update"]
-  dir: '$REPO_NAME/DataFusionQuickstartV1-cdap-data-pipeline.json'
-  id: 'wait-for-json-deployed-on-datafusion'
-  options:
+steps:       
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: push-manifest
+#    waitFor:
+#      - generate-manifest
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" -H "Content-Type: application/json" -d @DataFusionQuickstartV1-cdap-data-pipeline.json "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/DataFusionQuickstartV1/update"
+options:
   logging: CLOUD_LOGGING_ONLY
 substitutions:
   _REGION: 'us-west1'
