--- a/cloudbuild_manualtrigger.yaml
+++ b/cloudbuild_manualtrigger.yaml
@@ -7,7 +7,7 @@ steps:
     args:
       - '-c'
       - |
-        curl -X POST -H "Authorization: Bearer $(gcloud auth print-access-token)" -H "Content-Type: application/json" -d @${_JSONFILE} "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/${_FUSIONPIPELINE}/update"
+        curl -X POST -H "Content-Type: application/json" -d @${_JSONFILE} "$(gcloud beta data-fusion instances describe --location="${_REGION}" --format="value(apiEndpoint)" ${_INSTANCE_ID})/v3/namespaces/default/apps/${_FUSIONPIPELINE}/update"
 options:
   logging: CLOUD_LOGGING_ONLY
   dynamic_substitutions: true
